--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rust"
+name = "lamp"
 version = "0.1.0"
 authors = ["Ben Gamari <ben@smart-cactus.org>"]
 edition = "2018"
@@ -10,14 +10,23 @@ edition = "2018"
 cortex-m = "^0.6"
 cortex-m-rt = "^0.6"
 panic-halt = "^0.2"
+embedded-hal = "^0.2"
 
 [dependencies.stm32f0xx-hal]
 version = "0.14.0"
 features = [ "stm32f030x6", "rt" ]
+
+[[bin]]
+name = "lamp"
+test = false
+bench = false
 
 [profile.dev]
 panic = "abort"
 
 [profile.release]
 panic = "abort"
-
+codegen-units = 1
+debug = true
+lto = true
+opt-level = "s"
