rust firmware generally works

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -11,6 +11,14 @@ cortex-m = "^0.6"
 cortex-m-rt = "^0.6"
 cortex-m-semihosting = "^0.3"
 panic-halt = "^0.2"
+stm32f0 = "*"
+
+[replace]
+"spin:0.5.0" = { path = "./spin-rs" }
+
+[dependencies.lazy_static]
+version = "^1.2"
+features = [ "spin_no_std" ]
 
 [dependencies.embedded-hal]
 version = "^0.2"
