--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 authors = ["Ben Gamari <ben@smart-cactus.org>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+nosleep = []
 
 [dependencies]
 cortex-m = "^0.6"
