--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -28,7 +28,9 @@ defmt = "0.2.0"
 defmt-rtt = "0.2.0"
 panic-probe = { version = "0.2.0", features = ["print-defmt"] }
 embassy = { path = "./embassy/embassy", features = [ "defmt" ] }
-embassy-stm32 = { path = "./embassy/embassy-stm32", features = [ "stm32g071c8", "defmt" ] }
+embassy-stm32 = { path = "./embassy/embassy-stm32", features = [ "stm32g071c8", "defmt", "unstable-pac" ] }
+embassy-hal-common = { path = "./embassy/embassy-hal-common" }
+embassy-traits = { path = "./embassy/embassy-traits", features = ["defmt"] }
 
 [patch.crates-io]
 spin = { path = "./spin-rs" }
