--- a/firmware/openocd.cfg
+++ b/firmware/openocd.cfg
@@ -1,12 +1,2 @@
-source [find interface/ftdi/dp_busblaster_kt-link.cfg]
-adapter_khz 200
-jtag_khz 200
-transport select swd
-source [find target/stm32f0x.cfg]
-adapter_khz 200
-#cortex_m reset_config sysresetreq
-reset_config srst_push_pull srst_only connect_assert_srst
-init
-reset halt
-adapter_khz 200
-arm semihosting enable
+source [find interface/stlink-v2.cfg]
+source [find target/stm32g0x.cfg]
